--- a/index.html
+++ b/index.html
@@ -29,9 +29,32 @@
 <body>
 
   <div class="body-wrapper">
-    <header>
-      
-    </header>
+   <header>
+      <div class="header--container container">
+        <picture class="header__logo">
+          <!-- Desktop -->
+          <source media="(min-width: 1440px)" srcset="img/logo-desktop.png"/>
+
+          <!-- Tablet -->
+          <source media="(min-width: 768px)" srcset="img/logo-tablet.png"/>
+
+          <!-- Mobile (fallback) -->
+          <img src="img/mobile/ConquerBlocks_logo_mobile.png" alt="ConquerBlocks Academy logo" width="auto" height="auto" />
+        </picture>
+        <nav class="header--nav">
+          <ul>
+            <li class="header--list"><a href="#" class="header--link">Home</a></li>
+            <li class="header--list"><a href="#" class="header--link">Who we are</a></li>
+            <li class="header--list"><a href="#" class="header--link">Courses</a></li>
+            <li class="header--list"><a href="#" class="header--link">Blog</a></li>
+            <li class="header--list"><a href="#" class="header--link">Register</a></li>
+            <li class="header--list"><a href="#" class="header--link">Login</a></li>
+          </ul>
+        </nav>
+        <button class="btn">Contact us</button>
+      </div>
+            
+    </header> 
 
     <main>
   
