why-full responsive--DONE

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="heroe--card">
           <h2 class="heroe--text">
             <span class="master">Master </span>
-              Your skills with Conquer<span class="conquerblocks">
+              Your skills with <br>Conquer<span class="conquerblocks">
               Blocks
             </span>
           </h2>
@@ -88,7 +88,59 @@
             <img src="img\mobile\heroe-avatar_mobile.png" alt="ConquerBlocks Academy logo" width="auto" height="auto" />
         </picture>
       </div>
-  
+
+      <div class="why--container container">
+        <div class="why--card">         
+        <div class="why--text">
+          <p class="break--word">At <span>ConquerBlocks</span> ACADEMY, we believe that learning 
+              should not be a barrier, but a springboard toward 
+              your dreams. Our mission is to offer accessible, 
+              innovative, and student-centered educational experiences,
+              so that each person can develop real-world skills and 
+              achieve their personal and professional goals.
+          </p>
+          <a href="" class="btn">More information</a>
+        </div>
+          <picture class="why--image">
+            <!-- Desktop -->
+              <source media="(min-width: 1440px)" srcset="img\desktop\master_image_desktop.png"/>
+
+              <!-- Tablet -->
+              <source media="(min-width: 768px)" srcset="img\tablet\master_image_tablet.png"/>
+
+              <!-- Mobile (fallback) -->
+              <img src="img\mobile\master_image_mobile.png" alt="ConquerBlocks Academy logo" width="auto" height="auto" />
+          </picture>
+        </div>
+      </div>
+
+      <div class="course--wrapper">
+        <div class="course--container container">
+          <h2 class="course--header">Last <span>Courses</span> Available</h2>
+          <div class="course--cards">
+            <div class="card">
+              <img src="img/icon/python_icon.png" alt="python_icon">
+              <h3>Data Analysis with <span>Python</span></h3>
+              <p>A practical overview of libraries such as pandas, 
+                NumPy, and basic data visualization. Designed for 
+                those with some programming knowledge who want to 
+                dive into data analysis.
+              </p>
+              <a href="#" class="btn">Subscribe</a>
+            </div>
+            <div class="card">
+              <img src="img/icon/html_icon.png" alt="html">
+              <h3>Introduction to <span>Web Development</span></h3>
+              <p>Aprende HTML5, CSS básico (aunque en tu proyecto no uses CSS)
+                  y estructura de páginas web desde cero. Ideal para quienes quieren
+                  construir su primera web o mejorar sus habilidades de maquetación
+              </p>
+              <a href="#" class="btn">Subscribe</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </main>
 
     <footer>
