index-full responsive--DONE

--- a/index.html
+++ b/index.html
@@ -119,8 +119,10 @@
           <h2 class="course--header">Last <span>Courses</span> Available</h2>
           <div class="course--cards">
             <div class="card">
-              <img src="img/icon/python_icon.png" alt="python_icon">
-              <h3>Data Analysis with <span>Python</span></h3>
+              <div class="course--header">
+                <img src="img/icon/python_icon.png" alt="python_icon">
+                <h3>Data Analysis with <br><span>Python</span></h3>
+              </div>              
               <p>A practical overview of libraries such as pandas, 
                 NumPy, and basic data visualization. Designed for 
                 those with some programming knowledge who want to 
@@ -129,16 +131,56 @@
               <a href="#" class="btn">Subscribe</a>
             </div>
             <div class="card">
-              <img src="img/icon/html_icon.png" alt="html">
-              <h3>Introduction to <span>Web Development</span></h3>
+              <div class="course--header">
+                <img src="img/icon/html_icon.png" alt="html">
+                <h3>Introduction to <br><span>Web Development</span></h3>
+              </div>              
               <p>Aprende HTML5, CSS básico (aunque en tu proyecto no uses CSS)
                   y estructura de páginas web desde cero. Ideal para quienes quieren
                   construir su primera web o mejorar sus habilidades de maquetación
               </p>
               <a href="#" class="btn">Subscribe</a>
             </div>
+          </div>          
+        </div>
+      </div>
+
+      <div class="news--container container">
+        <h2 class="news--header">
+          Breaking 
+          <span>
+            News
+          </span>
+        </h2>
+        <div class="news--cards-container">
+          <div class="card">
+            <div class="tag">
+              <h3>1</h3>
+            </div>
+              <p class="text">
+                New version of the Data Analysis 
+                course available (September 2025).
+                 We have updated the Data Analysis
+                  with Python course with new 
+                  exercises and material on basic 
+                  machine learning
+              </p>            
+          </div>
+          <div class="card">
+            <div class="tag">
+              <h3>2</h3>
+            </div>
+              <p class="text">
+                Guest speaker: live talk on web 
+                development (August 2025). 
+                We invite a professional from 
+                the industry to deliver a live 
+                session and answer students’ questions.
+              </p>            
           </div>
         </div>
+        <a href="#" class="btn">More News</a>
+
       </div>
 
     </main>
