who_we_are-full responsive--DONE

--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
           </picture>
           <nav class="header--nav">
             <ul>
-              <li class="header--list"><a href="#" class="header--link">Home</a></li>
-              <li class="header--list"><a href="#" class="header--link">Who we are</a></li>
-              <li class="header--list"><a href="#" class="header--link">Courses</a></li>
-              <li class="header--list"><a href="#" class="header--link">Blog</a></li>
-              <li class="header--list"><a href="#" class="header--link">Register</a></li>
-              <li class="header--list"><a href="#" class="header--link">Login</a></li>
+              <li class="header--list"><a href="index.html" class="header--link">Home</a></li>
+              <li class="header--list"><a href="who_we_are.html" class="header--link">Who we are</a></li>
+              <li class="header--list"><a href="courses.html" class="header--link">Courses</a></li>
+              <li class="header--list"><a href="blog.html" class="header--link">Blog</a></li>
+              <li class="header--list"><a href="register.html" class="header--link">Register</a></li>
+              <li class="header--list"><a href="login.html" class="header--link">Login</a></li>
             </ul>
           </nav>
           <button class="btn">Contact us</button>
