courses-full responsive--DONE

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <li class="header--list"><a href="login.html" class="header--link">Login</a></li>
             </ul>
           </nav>
-          <button class="btn">Contact us</button>
+          <a href="contact.html" class="btn">Contact us</a>
         </div>
               
     </header> 
