--- a/who_we_are.html
+++ b/who_we_are.html
@@ -49,10 +49,10 @@
               <li class="header--list"><a href="login.html" class="header--link">Login</a></li>
             </ul>
           </nav>
-          <button class="btn">Contact us</button>
+          <a href="contact.html" class="btn">Contact us</a>
         </div>
               
-    </header> 
+  </header> 
    <main>
     <div class="who--container container">
       <h3 class="who--slogan">
