blog-full responsive--DONE

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
             practical skills and prepare you for professional work.
           </p>
           <div class="buttons--container">
-            <a href="" class="btn--primary">About us</a>
-            <a href="" class="btn--primary">Log in</a>
+            <a href="who_we_are.html" class="btn--primary">About us</a>
+            <a href="login.html" class="btn--primary">Log in</a>
           </div>
         </div>
         
@@ -99,7 +99,7 @@
               so that each person can develop real-world skills and 
               achieve their personal and professional goals.
           </p>
-          <a href="" class="btn">More information</a>
+          <a href="contact.html" class="btn">More information</a>
         </div>
           <picture class="why--image">
             <!-- Desktop -->
@@ -128,7 +128,7 @@
                 those with some programming knowledge who want to 
                 dive into data analysis.
               </p>
-              <a href="#" class="btn">Subscribe</a>
+              <a href="courses.html" class="btn">Subscribe</a>
             </div>
             <div class="card">
               <div class="course--header">
@@ -139,7 +139,7 @@
                   y estructura de páginas web desde cero. Ideal para quienes quieren
                   construir su primera web o mejorar sus habilidades de maquetación
               </p>
-              <a href="#" class="btn">Subscribe</a>
+              <a href="courses.html" class="btn">Subscribe</a>
             </div>
           </div>          
         </div>
@@ -179,7 +179,7 @@
               </p>            
           </div>
         </div>
-        <a href="#" class="btn">More News</a>
+        <a href="blog.html" class="btn">More News</a>
 
       </div>
 
