contact-full responsive--DONE&DONE

--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,84 @@
               
   </header>
   <main>
+    <div class="contact--container container">
+      <div class="staff--container">
+        <h3 class="staff--slogan">
+          Our <span>Staff</span>
+        </h3>
+        <picture class="staff--img">
+          <!-- Desktop -->
+            <source media="(min-width: 1440px)" srcset="img\desktop\staff_desktop.png"/>
 
+            <!-- Tablet -->
+            <source media="(min-width: 768px)" srcset="img\tablet\staff_tablet.png"/>
+
+            <!-- Mobile (fallback) -->
+            <img src="img\mobile\staff_mobile.png" alt="ConquerBlocks Academy logo" width="auto" height="auto" />
+        </picture>
+        <p class="instructions">
+          Contact us in all our social medias: @conquer<span>Blocks.</span>
+        </p>
+      </div>
+      
+      <div class="location--container">
+        <div class="map--container">
+          <div class="map is--default" id="madrid">
+            <iframe
+              src="https://www.google.com/maps?q=Madrid,España&output=embed"
+              loading="lazy">
+            </iframe>
+          </div>
+
+          <div class="map" id="valencia">
+            <iframe
+              src="https://www.google.com/maps?q=Valencia,España&output=embed"
+              loading="lazy">
+            </iframe>
+          </div>
+
+          <div class="map" id="coruna">
+            <iframe
+              src="https://www.google.com/maps?q=A+Coruña,España&output=embed"
+              loading="lazy">
+            </iframe>
+          </div>
+
+          <div class="map" id="malaga">
+            <iframe
+              src="https://www.google.com/maps?q=Málaga,España&output=embed"
+              loading="lazy">
+            </iframe>
+          </div>
+
+          <div class="map" id="bilbao">
+            <iframe
+              src="https://www.google.com/maps?q=Bilbao,España&output=embed"
+              loading="lazy">
+            </iframe>
+          </div>
+
+          <div class="map" id="cdmx">
+            <iframe
+              src="https://www.google.com/maps?q=Ciudad+de+México,México&output=embed"
+              loading="lazy">
+            </iframe>
+          </div>
+        </div>
+
+        <div class="map--text">
+          <h3 class="header--locations">Where to find Conquer<span>Blocks:</span></h3>
+            <ul class="location--list">
+              <li class="locations"><a href="#madrid">NovaTech Park – <span>Madrid</span></a></li>
+              <li class="locations"><a href="#valencia">Distrito Digital Levante  – <span>Valencia</span></a></li>
+              <li class="locations"><a href="#coruna">Hub Atlántico  – <span>La Coruña</span></a></li>
+              <li class="locations"><a href="#malaga">Campus Tech Sur  – <span>Málaga</span></a></li>
+              <li class="locations"><a href="#bilbao">Centro Innovación Norte – <span>Bilbao</span></a></li>
+              <li class="locations"><a href="#cdmx">ConquerBlocks LATAM Hub – <span>Ciudad de Mexico</span></a></li>
+            </ul>          
+        </div>        
+      </div>
+    </div>
   </main>
   <footer>
       <div class="footer--container container">
